[metadata]
name = further-link
author = pi-top (CEED Ltd)
author_email = deb-maintainers@pi-top.com
license = Apache Software License
description = Further Link
keywords = pi-top, further, link, further-link
url = https://github.com/pi-top/Further-Link
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    # Package will always update in-step with SDK
    # So avoid version-locking
    #
    # Vendored to allow tests to pass...
    #
    # pitop
    click>=7.1.2,<7.2
    aiofiles>=0.6.0,<0.7.0
    aiohttp>=3.7.4,<3.8.0
    aiohttp_cors>=0.7.0,<0.8.0
    numpy>=1.19.5,<1.20
    Pillow>=8.1.2,<8.2
    pt_web_vnc
    pyOpenSSL>=19.0.0,<21.0.0

include_package_data = True

[options.extras_require]
test =
    mock
    pytest
    pytest-asyncio
    pytest-cov
    pytest-timeout
    pytest-aiohttp
    aioresponses

[options.entry_points]
console_scripts =
    further-link=further_link.__main__:main
    start-further=further_link.start_further:start_further

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black

[tool:pytest]
timeout = 5
asyncio_mode = auto
